--- a/MedLab/src/main/resources/application.properties
+++ b/MedLab/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.datasource.password=Patil@09
 #ORM Settings
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+jwt.secret=your_secret_key_ver_very_long
