--- a/MedLab/src/main/resources/application.properties
+++ b/MedLab/src/main/resources/application.properties
@@ -9,4 +9,8 @@ spring.datasource.password=Patil@09
 #ORM Settings
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-jwt.secret=your_secret_key_ver_very_long
+# JWT Secret Key
+jwt.secret=mySuperSecretKey
+
+# Token Expiration Time (e.g., 10 hours in milliseconds)
+jwt.token.expiration=36000000
